fix(note-editor): share modal invisible in full screen mode (#24)
* fix(note-editor): share modal invisible in full screen mode

* refactor(note-editor): removed optionsVisible flag to show option opening button

--- a/src/styles/pages/notes.scss
+++ b/src/styles/pages/notes.scss
@@ -285,6 +285,14 @@
         background-color: lighten($color, 5) !important;
       }
     }
+    .modal-wrapper .standard-button {
+      background-color: $green !important;
+      border-radius: 5px;
+      padding: 10px 15px;
+      &:hover {
+        background-color: lighten($color: $green, $amount: 5) !important;
+      }
+    }
     .standard-badge {
       background-color: $color;
     }
